fix blog post image on mobile

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -94,11 +94,7 @@
     }
 
     & > figcaption {
-      @apply mt-4 text-center;
-
-      & > p {
-        @apply text-slate-700;
-      }
+      @apply mt-4 text-center text-slate-700 italic;
     }
   }
 
